# brownie-stablecoin-v23

./: .gitignore  README.md  brownie-config.yaml  pyproject.toml
contracts/: DSCEngine.vy  DecentralizedStableCoin.vy
contracts/test/: MockV3Aggregator.vy  MockWBTC.vy  MockWETH.vy
interfaces/: AggregatorV3Interface.vy
scripts/: deploy_dsc.py  helper_functions.py
tests/: conftest.py
tests/unit/: test_dsc.py  test_dsce.py
